# handsfreectl

./: Cargo.toml  README.md  shell.nix  test-daemon.sh
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  daemon.rs  lib.rs  main.rs  protocol.rs
