[package]
name = "handsfreectl"
version = "0.2.0"
edition = "2024"
description = "Command line control interface for the Handsfree speech-to-text daemon"
authors = ["Achyudh Ram <mail@achyudh.me>"]
license = "GPL-3.0-only"
repository = "https://github.com/achyudh/handsfreectl"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.28", features = ["user"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"